--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "node": "^13.1.0",
     "pg": "^7.12.1"
   },
   "devDependencies": {
